Unit_2-C_Programming/Unit_2_lesson4_c_Array_and_string/String/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
23:43:23 **** Rebuild of configuration Debug for project 1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EX1.o "..\\EX1.c" 
..\EX1.c: In function 'main':
..\EX1.c:9:13: warning: format '%s' expects argument of type 'char *', but argument 2 has type 'char (*)[100]' [-Wformat=]
     scanf("%s", &str);
             ^
..\EX1.c:16:10: error: 'i' undeclared (first use in this function)
     for (i=0; i=\0; i++)
          ^
..\EX1.c:16:10: note: each undeclared identifier is reported only once for each function it appears in
..\EX1.c:16:17: error: stray '\' in program
     for (i=0; i=\0; i++)
                 ^
..\EX1.c:20:12: error: 'frq' undeclared (first use in this function)
            frq+=1;
            ^~~
23:43:40 **** Incremental Build of configuration Debug for project 1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EX1.o "..\\EX1.c" 
..\EX1.c: In function 'main':
..\EX1.c:9:13: warning: format '%s' expects argument of type 'char *', but argument 2 has type 'char (*)[100]' [-Wformat=]
     scanf("%s", &str);
             ^
..\EX1.c:16:10: error: 'i' undeclared (first use in this function)
     for (i=0; i='\0'; i++)
          ^
..\EX1.c:16:10: note: each undeclared identifier is reported only once for each function it appears in
..\EX1.c:20:12: error: 'frq' undeclared (first use in this function)
            frq+=1;
            ^~~
23:44:28 **** Incremental Build of configuration Debug for project 1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EX1.o "..\\EX1.c" 
..\EX1.c: In function 'main':
..\EX1.c:9:13: warning: format '%s' expects argument of type 'char *', but argument 2 has type 'char (*)[100]' [-Wformat=]
     scanf("%s", &str);
             ^
..\EX1.c:16:10: error: 'i' undeclared (first use in this function)
     for (i=0; str[i]=0 ; i++)
          ^
..\EX1.c:16:10: note: each undeclared identifier is reported only once for each function it appears in
..\EX1.c:20:12: error: 'frq' undeclared (first use in this function)
            frq+=1;
            ^~~
23:44:35 **** Incremental Build of configuration Debug for project 1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EX1.o "..\\EX1.c" 
..\EX1.c: In function 'main':
..\EX1.c:9:13: warning: format '%s' expects argument of type 'char *', but argument 2 has type 'char (*)[100]' [-Wformat=]
     scanf("%s", &str);
             ^
..\EX1.c:16:10: error: 'i' undeclared (first use in this function)
     for (i=0; str[i]==0 ; i++)
          ^
..\EX1.c:16:10: note: each undeclared identifier is reported only once for each function it appears in
..\EX1.c:20:12: error: 'frq' undeclared (first use in this function)
            frq+=1;
            ^~~
23:44:51 **** Incremental Build of configuration Debug for project 1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EX1.o "..\\EX1.c" 
..\EX1.c: In function 'main':
..\EX1.c:9:13: warning: format '%s' expects argument of type 'char *', but argument 2 has type 'char (*)[100]' [-Wformat=]
     scanf("%s", &str);
             ^
..\EX1.c:20:12: error: 'frq' undeclared (first use in this function)
            frq+=1;
            ^~~
..\EX1.c:20:12: note: each undeclared identifier is reported only once for each function it appears in
23:45:01 **** Incremental Build of configuration Debug for project 1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EX1.o "..\\EX1.c" 
..\EX1.c: In function 'main':
..\EX1.c:9:13: warning: format '%s' expects argument of type 'char *', but argument 2 has type 'char (*)[100]' [-Wformat=]
     scanf("%s", &str);
             ^
gcc -o 1.exe EX1.o 
Info: Nothing to build for 1
23:46:41 **** Incremental Build of configuration Debug for project 1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EX1.o "..\\EX1.c" 
..\EX1.c: In function 'main':
..\EX1.c:9:13: warning: format '%s' expects argument of type 'char *', but argument 2 has type 'char (*)[100]' [-Wformat=]
     scanf("%s", &str);
             ^
gcc -o 1.exe EX1.o 
Info: Nothing to build for 1
23:47:56 **** Incremental Build of configuration Debug for project 1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EX1.o "..\\EX1.c" 
..\EX1.c: In function 'main':
..\EX1.c:9:13: warning: format '%s' expects argument of type 'char *', but argument 2 has type 'char (*)[100]' [-Wformat=]
     scanf("%s", &str);
             ^
gcc -o 1.exe EX1.o 
Info: Nothing to build for 1
23:49:33 **** Incremental Build of configuration Debug for project 1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EX1.o "..\\EX1.c" 
gcc -o 1.exe EX1.o 
Info: Nothing to build for 1
23:51:50 **** Incremental Build of configuration Debug for project 1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EX1.o "..\\EX1.c" 
gcc -o 1.exe EX1.o 
Info: Nothing to build for 1
23:53:53 **** Incremental Build of configuration Debug for project 1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EX1.o "..\\EX1.c" 
gcc -o 1.exe EX1.o 
Info: Nothing to build for 1
Info: Nothing to build for 1
23:57:15 **** Rebuild of configuration Debug for project 2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EXE2.o "..\\EXE2.c" 
gcc -o 2.exe EXE2.o 
Info: Nothing to build for 2
Info: Nothing to build for 1
00:03:32 **** Incremental Build of configuration Debug for project 2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EXE2.o "..\\EXE2.c" 
gcc -o 2.exe EXE2.o 
00:03:34 **** Rebuild of configuration Debug for project 3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EX3.o "..\\EX3.c" 
..\EX3.c: In function 'main':
..\EX3.c:12:14: warning: implicit declaration of function 'strlen' [-Wimplicit-function-declaration]
     int size=strlen(str);
              ^~~~~~
..\EX3.c:12:14: warning: incompatible implicit declaration of built-in function 'strlen'
..\EX3.c:12:14: note: include '<string.h>' or provide a declaration of 'strlen'
..\EX3.c:6:9: warning: unused variable 'freq' [-Wunused-variable]
     int freq = 0, i;
         ^~~~
gcc -o 3.exe EX3.o 
Info: Nothing to build for 1
Info: Nothing to build for 2
00:03:48 **** Incremental Build of configuration Debug for project 3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EX3.o "..\\EX3.c" 
..\EX3.c: In function 'main':
..\EX3.c:12:14: warning: implicit declaration of function 'strlen' [-Wimplicit-function-declaration]
     int size=strlen(str);
              ^~~~~~
..\EX3.c:12:14: warning: incompatible implicit declaration of built-in function 'strlen'
..\EX3.c:12:14: note: include '<string.h>' or provide a declaration of 'strlen'
gcc -o 3.exe EX3.o 
Info: Nothing to build for 1
Info: Nothing to build for 2
00:04:25 **** Incremental Build of configuration Debug for project 3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EX3.o "..\\EX3.c" 
..\EX3.c: In function 'main':
..\EX3.c:13:7: warning: implicit declaration of function 'strlen' [-Wimplicit-function-declaration]
     s=strlen(str)
       ^~~~~~
..\EX3.c:13:7: warning: incompatible implicit declaration of built-in function 'strlen'
..\EX3.c:13:7: note: include '<string.h>' or provide a declaration of 'strlen'
..\EX3.c:14:5: error: expected ';' before 'for'
     for (i = 0; str[i] != '\0'; i++)
     ^~~
..\EX3.c:12:9: warning: variable 's' set but not used [-Wunused-but-set-variable]
     int s;
         ^
..\EX3.c:6:10: warning: unused variable 'i' [-Wunused-variable]
     int  i;
          ^
..\EX3.c:5:10: warning: unused variable 'rev' [-Wunused-variable]
     char rev[100];
          ^~~
Info: Nothing to build for 1
Info: Nothing to build for 2
00:04:33 **** Incremental Build of configuration Debug for project 3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EX3.o "..\\EX3.c" 
..\EX3.c: In function 'main':
..\EX3.c:13:7: warning: implicit declaration of function 'strlen' [-Wimplicit-function-declaration]
     s=strlen(str);
       ^~~~~~
..\EX3.c:13:7: warning: incompatible implicit declaration of built-in function 'strlen'
..\EX3.c:13:7: note: include '<string.h>' or provide a declaration of 'strlen'
gcc -o 3.exe EX3.o 
Info: Nothing to build for 3
00:06:45 **** Incremental Build of configuration Debug for project 3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EX3.o "..\\EX3.c" 
gcc -o 3.exe EX3.o 
00:07:57 **** Incremental Build of configuration Debug for project 3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EX3.o "..\\EX3.c" 
gcc -o 3.exe EX3.o 
00:09:01 **** Incremental Build of configuration Debug for project 3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EX3.o "..\\EX3.c" 
gcc -o 3.exe EX3.o 
Info: Nothing to build for 1
Info: Nothing to build for 2
00:12:01 **** Incremental Build of configuration Debug for project 3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EX3.o "..\\EX3.c" 
gcc -o 3.exe EX3.o 
Info: Nothing to build for 3
